# heed

./: .gitignore  .resnet.env  Dockerfile.train  Pipfile  README.md  check_cli_tools.sh  dataset.dvc  devs.README.md  docker-compose.yaml  fit.py  fit_model.py  generate-ww.py  reducing-inference-time.odp  representation-learning.odp  requirements.txt  run_main.py
.dvc/: config
app/: README.md  requirements.txt
deploy/: Dockerfile  Dockerfile.tensorrt
deploy/app/: log.ini  main.py  run_gunicorn.sh
deploy/model/: predictor.py
env_vars/leenet/: .dev.env  .prod.env  .test.env
env_vars/resnet/: .dev.env  .prod.env  .test.env  hp.ranges
fit/: Dockerfile.train  README.md  fit.py  requirements.txt
legacy-deploy/: Makefile
legacy-deploy/dockers/: deployment.sh
model/: pyproject.toml
models/: LICENSE  README.md  requirements.txt  setup.cfg
models/src/kws/: config.py  data.py  old.architecture.py  old.train.py  routine.py
models/src/kws/Architecture/LeeNet/: layers.py
models/src/kws/Architecture/MobileNet/: model.py
models/src/wwv/: config.py  eval.py  plot.py  routine.py
models/src/wwv/Architecture/HTSwin/: layers.py
notebooks/: arch-testing.ipynb  augmentation-testing.ipynb  autoencoder.ipynb  base64audio  endpoint-testing.ipynb  get-data.ipynb  hpo.py  hyperparameter-tuning.ipynb  latency_result_CPU.list  latency_result_CUDA.list  latency_result_TensorRT.list  model-embedding.ipynb  training-test.ipynb
serve/: Dockerfile  Dockerfile.tensorrt  README.md  requirements.txt
serve/app/: main.py  schema.py
tests/: fit_all_models_test.py
torch-deploy/: Dockerfile.tensorrt  README.md  docker_run.sh
torch-deploy/app/: bas64.example  config.py  exception_handler.py  main.py  schema.py
website/: Dockerfile.website  devs.README.md  requirements.txt
website/core/: asgi.py  consumers.py  (+2 more)
(+52 files in other folders)
