[metadata]
name = kws
description = Key-word spotting deep learning models for audio domain 
author = Akin Wilson
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    kws
install_requires =
    torch-audiomentations>=0.11.0
    nnAudio>=0.3.0
    torchvision>=0.13.0
    transformers>=4.21.2
    pytorch-lightning>=1.7.4
    pydantic>=1.10.1
    pandas>=1.0.4
    matplotlib>=3.5.1
python_requires = >=3.6
package_dir =
    =src
zip_safe = no


[flake8]
max-line-length = 160